sandbox/output
TicketDispenserTest.java:42: error: cannot find symbol
        Mockito.when(TurnNumberSequence.getNextTurnNumber()).thenReturn(1);
        ^
  symbol:   variable Mockito
  location: class TicketDispenserTest
1 error
